--- a/프로젝트/1일차.ipynb
+++ b/프로젝트/1일차.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -54,130 +54,130 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2019-10-15</td>\n",
-       "      <td>405136001</td>\n",
-       "      <td>7997025</td>\n",
-       "      <td>360-1</td>\n",
-       "      <td>33.456267</td>\n",
-       "      <td>126.551750</td>\n",
-       "      <td>제주대학교입구</td>\n",
-       "      <td>06시</td>\n",
-       "      <td>266.0</td>\n",
-       "      <td>제대마을</td>\n",
-       "      <td>33.457724</td>\n",
-       "      <td>126.554014</td>\n",
+       "      <th>210452</th>\n",
+       "      <td>210452</td>\n",
+       "      <td>2019-10-28</td>\n",
+       "      <td>405328102</td>\n",
+       "      <td>7983486</td>\n",
+       "      <td>281-2</td>\n",
+       "      <td>33.255783</td>\n",
+       "      <td>126.577450</td>\n",
+       "      <td>비석거리</td>\n",
+       "      <td>21시</td>\n",
+       "      <td>528.0</td>\n",
+       "      <td>삼아아파트</td>\n",
+       "      <td>33.251896</td>\n",
+       "      <td>126.574417</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210453</th>\n",
+       "      <td>210453</td>\n",
+       "      <td>2019-10-28</td>\n",
+       "      <td>405328102</td>\n",
+       "      <td>7983486</td>\n",
+       "      <td>281-2</td>\n",
+       "      <td>33.248595</td>\n",
+       "      <td>126.568527</td>\n",
+       "      <td>동문로터리</td>\n",
+       "      <td>21시</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>매일올레시장 7번입구</td>\n",
+       "      <td>33.249753</td>\n",
+       "      <td>126.565959</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210454</th>\n",
+       "      <td>210454</td>\n",
+       "      <td>2019-10-28</td>\n",
+       "      <td>405328102</td>\n",
+       "      <td>7983486</td>\n",
+       "      <td>281-2</td>\n",
+       "      <td>33.251891</td>\n",
+       "      <td>126.560303</td>\n",
+       "      <td>서귀포시 구 버스터미널</td>\n",
+       "      <td>21시</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>아랑조을거리 입구</td>\n",
+       "      <td>33.251084</td>\n",
+       "      <td>126.559551</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210455</th>\n",
+       "      <td>210455</td>\n",
+       "      <td>2019-10-28</td>\n",
+       "      <td>405328102</td>\n",
+       "      <td>7983486</td>\n",
+       "      <td>281-2</td>\n",
+       "      <td>33.251084</td>\n",
+       "      <td>126.559551</td>\n",
+       "      <td>아랑조을거리 입구</td>\n",
+       "      <td>21시</td>\n",
+       "      <td>223.0</td>\n",
+       "      <td>평생학습관</td>\n",
+       "      <td>33.249504</td>\n",
+       "      <td>126.558068</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210456</th>\n",
+       "      <td>210456</td>\n",
+       "      <td>2019-10-28</td>\n",
+       "      <td>405328102</td>\n",
+       "      <td>7983486</td>\n",
+       "      <td>281-2</td>\n",
+       "      <td>33.248487</td>\n",
+       "      <td>126.511195</td>\n",
+       "      <td>대륜동주민센터</td>\n",
+       "      <td>21시</td>\n",
+       "      <td>189.0</td>\n",
+       "      <td>서귀포버스터미널(가상정류소)</td>\n",
+       "      <td>33.249091</td>\n",
+       "      <td>126.509224</td>\n",
        "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2019-10-15</td>\n",
-       "      <td>405136001</td>\n",
-       "      <td>7997025</td>\n",
-       "      <td>360-1</td>\n",
-       "      <td>33.457724</td>\n",
-       "      <td>126.554014</td>\n",
-       "      <td>제대마을</td>\n",
-       "      <td>06시</td>\n",
-       "      <td>333.0</td>\n",
-       "      <td>제대아파트</td>\n",
-       "      <td>33.458783</td>\n",
-       "      <td>126.557353</td>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2019-10-15</td>\n",
-       "      <td>405136001</td>\n",
-       "      <td>7997025</td>\n",
-       "      <td>360-1</td>\n",
-       "      <td>33.458783</td>\n",
-       "      <td>126.557353</td>\n",
-       "      <td>제대아파트</td>\n",
-       "      <td>06시</td>\n",
-       "      <td>415.0</td>\n",
-       "      <td>제주대학교</td>\n",
-       "      <td>33.459893</td>\n",
-       "      <td>126.561624</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2019-10-15</td>\n",
-       "      <td>405136001</td>\n",
-       "      <td>7997025</td>\n",
-       "      <td>360-1</td>\n",
-       "      <td>33.479705</td>\n",
-       "      <td>126.543811</td>\n",
-       "      <td>남국원(아라방면)</td>\n",
-       "      <td>06시</td>\n",
-       "      <td>578.0</td>\n",
-       "      <td>제주여자중고등학교(아라방면)</td>\n",
-       "      <td>33.484860</td>\n",
-       "      <td>126.542928</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2019-10-15</td>\n",
-       "      <td>405136001</td>\n",
-       "      <td>7997025</td>\n",
-       "      <td>360-1</td>\n",
-       "      <td>33.485662</td>\n",
-       "      <td>126.494923</td>\n",
-       "      <td>도호동</td>\n",
-       "      <td>07시</td>\n",
-       "      <td>374.0</td>\n",
-       "      <td>은남동</td>\n",
-       "      <td>33.485822</td>\n",
-       "      <td>126.490897</td>\n",
-       "      <td>64</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id        date   route_id    vh_id route_nm  now_latitude  now_longitude  \\\n",
-       "0   0  2019-10-15  405136001  7997025    360-1     33.456267     126.551750   \n",
-       "1   1  2019-10-15  405136001  7997025    360-1     33.457724     126.554014   \n",
-       "2   2  2019-10-15  405136001  7997025    360-1     33.458783     126.557353   \n",
-       "3   3  2019-10-15  405136001  7997025    360-1     33.479705     126.543811   \n",
-       "4   4  2019-10-15  405136001  7997025    360-1     33.485662     126.494923   \n",
+       "            id        date   route_id    vh_id route_nm  now_latitude  \\\n",
+       "210452  210452  2019-10-28  405328102  7983486    281-2     33.255783   \n",
+       "210453  210453  2019-10-28  405328102  7983486    281-2     33.248595   \n",
+       "210454  210454  2019-10-28  405328102  7983486    281-2     33.251891   \n",
+       "210455  210455  2019-10-28  405328102  7983486    281-2     33.251084   \n",
+       "210456  210456  2019-10-28  405328102  7983486    281-2     33.248487   \n",
        "\n",
-       "  now_station now_arrive_time  distance     next_station  next_latitude  \\\n",
-       "0     제주대학교입구             06시     266.0             제대마을      33.457724   \n",
-       "1        제대마을             06시     333.0            제대아파트      33.458783   \n",
-       "2       제대아파트             06시     415.0            제주대학교      33.459893   \n",
-       "3   남국원(아라방면)             06시     578.0  제주여자중고등학교(아라방면)      33.484860   \n",
-       "4         도호동             07시     374.0              은남동      33.485822   \n",
+       "        now_longitude   now_station now_arrive_time  distance  \\\n",
+       "210452     126.577450          비석거리             21시     528.0   \n",
+       "210453     126.568527         동문로터리             21시     280.0   \n",
+       "210454     126.560303  서귀포시 구 버스터미널             21시     114.0   \n",
+       "210455     126.559551     아랑조을거리 입구             21시     223.0   \n",
+       "210456     126.511195       대륜동주민센터             21시     189.0   \n",
        "\n",
-       "   next_longitude  next_arrive_time  \n",
-       "0      126.554014                24  \n",
-       "1      126.557353                36  \n",
-       "2      126.561624                40  \n",
-       "3      126.542928                42  \n",
-       "4      126.490897                64  "
+       "           next_station  next_latitude  next_longitude  next_arrive_time  \n",
+       "210452            삼아아파트      33.251896      126.574417                96  \n",
+       "210453      매일올레시장 7번입구      33.249753      126.565959                50  \n",
+       "210454        아랑조을거리 입구      33.251084      126.559551                16  \n",
+       "210455            평생학습관      33.249504      126.558068                38  \n",
+       "210456  서귀포버스터미널(가상정류소)      33.249091      126.509224                24  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bus_tr = pd.read_csv('train.csv')\n",
-    "bus_tr.head(5)"
+    "bus_tr.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -265,6 +265,38 @@
        "      <td>33.478850</td>\n",
        "      <td>126.488350</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>210460</td>\n",
+       "      <td>2019-10-29</td>\n",
+       "      <td>405136001</td>\n",
+       "      <td>7997025</td>\n",
+       "      <td>360-1</td>\n",
+       "      <td>33.478850</td>\n",
+       "      <td>126.488350</td>\n",
+       "      <td>대림2차아파트</td>\n",
+       "      <td>08시</td>\n",
+       "      <td>334.0</td>\n",
+       "      <td>연동대림1차아파트</td>\n",
+       "      <td>33.480700</td>\n",
+       "      <td>126.489933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>210461</td>\n",
+       "      <td>2019-10-29</td>\n",
+       "      <td>405136001</td>\n",
+       "      <td>7997025</td>\n",
+       "      <td>360-1</td>\n",
+       "      <td>33.480700</td>\n",
+       "      <td>126.489933</td>\n",
+       "      <td>연동대림1차아파트</td>\n",
+       "      <td>08시</td>\n",
+       "      <td>550.0</td>\n",
+       "      <td>케이티앤지</td>\n",
+       "      <td>33.482077</td>\n",
+       "      <td>126.485355</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -274,49 +306,52 @@
        "0  210457  2019-10-29  405136001  7997025    360-1     33.457724   \n",
        "1  210458  2019-10-29  405136001  7997025    360-1     33.458783   \n",
        "2  210459  2019-10-29  405136001  7997025    360-1     33.478867   \n",
+       "3  210460  2019-10-29  405136001  7997025    360-1     33.478850   \n",
+       "4  210461  2019-10-29  405136001  7997025    360-1     33.480700   \n",
        "\n",
        "   now_longitude  now_station now_arrive_time  distance next_station  \\\n",
        "0     126.554014         제대마을             07시     333.0        제대아파트   \n",
        "1     126.557353        제대아파트             07시     415.0        제주대학교   \n",
        "2     126.483833  한라중학교/부영아파트             08시     417.0      대림2차아파트   \n",
+       "3     126.488350      대림2차아파트             08시     334.0    연동대림1차아파트   \n",
+       "4     126.489933    연동대림1차아파트             08시     550.0        케이티앤지   \n",
        "\n",
        "   next_latitude  next_longitude  \n",
        "0      33.458783      126.557353  \n",
        "1      33.459893      126.561624  \n",
-       "2      33.478850      126.488350  "
+       "2      33.478850      126.488350  \n",
+       "3      33.480700      126.489933  \n",
+       "4      33.482077      126.485355  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bus_te = pd.read_csv('test.csv')\n",
-    "bus_te.head(3)"
+    "bus_te.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['id', 'date', 'route_id', 'vh_id', 'route_nm', 'now_latitude',\n",
-       "       'now_longitude', 'now_station', 'now_arrive_time', 'distance',\n",
-       "       'next_station', 'next_latitude', 'next_longitude'],\n",
-       "      dtype='object')"
+       "((210457, 14), (91774, 13))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bus_te.columns"
+    "bus_tr.shape, bus_te.shape"
    ]
   },
   {
